// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.nsymv110,html.nsymv110 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_121uhli0 _115b53m10 _115b53m13">
+        <div class="m8hx7y0 nsymv18p nsymv17l nsymv1ax nsymv19t nsymv15d nsymv169 nsymv1i9 nsymv14j nsymv14c _115b53m10 _115b53m13 nsymv133 nsymv136">
+          <span class="m8hx7y0 nsymv14x _115b53m0 _115b53m1 _115b53m1t _115b53ma _1170cum4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .m8hx7y0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
.m8hx7y1 {
  display: block;
}
.m8hx7y2 {
  line-height: 1;
}
.m8hx7y3 {
  list-style: none;
}
.m8hx7y4 {
  quotes: none;
}
.m8hx7y4:after,
.m8hx7y4:before {
  content: "";
}
.m8hx7y5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.m8hx7y6 {
  appearance: none;
}
.m8hx7y7 {
  background-color: transparent;
}
.m8hx7y8 {
  outline: var(--_1u46xyh10) solid transparent;
  transition: outline-color 0.125s ease;
}
.m8hx7y8:focus-visible {
  outline-color: var(--_1u46xyhm);
}
.m8hx7ya {
  color: inherit;
}
.m8hx7yb:disabled {
  opacity: 1;
}
.m8hx7yb::-ms-expand {
  display: none;
}
.m8hx7yd[type="number"] {
  -moz-appearance: textfield;
}
.m8hx7yd[type="number"]::-webkit-inner-spin-button,
.m8hx7yd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.m8hx7yd::-ms-clear {
  display: none;
}
.m8hx7yd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.m8hx7yg {
  color: inherit;
  text-decoration: none;
}
.nsymv10 {
  overflow: hidden;
}
.nsymv11 {
  overflow: scroll;
}
.nsymv12 {
  overflow: visible;
}
.nsymv13 {
  overflow: auto;
}
.nsymv14 {
  -webkit-user-select: none;
  user-select: none;
}
.nsymv15 {
  outline: var(--_1u46xyh10) solid transparent;
  transition: outline-color 0.125s ease;
}
.nsymv15:focus-visible {
  outline-color: var(--_1u46xyhm);
}
.nsymv16 {
  opacity: 0;
}
.nsymv17 {
  z-index: 0;
}
.nsymv18 {
  z-index: 1;
}
.nsymv19 {
  z-index: 2;
}
.nsymv1a {
  z-index: 90;
}
.nsymv1b {
  z-index: 100;
}
.nsymv1c {
  z-index: 200;
}
.nsymv1d {
  z-index: 290;
}
.nsymv1e {
  z-index: 300;
}
.nsymv1f {
  z-index: 400;
}
.nsymv1g {
  cursor: default;
}
.nsymv1h {
  cursor: pointer;
}
.nsymv1i {
  pointer-events: none;
}
.nsymv1j {
  top: 0;
}
.nsymv1k {
  bottom: 0;
}
.nsymv1l {
  left: 0;
}
.nsymv1m {
  right: 0;
}
.nsymv1n {
  height: 100%;
}
.nsymv1o {
  height: var(--_1u46xyh9);
}
.nsymv1p {
  width: 100%;
}
.nsymv1q {
  width: var(--_1u46xyh9);
}
.nsymv1r {
  min-width: 0;
}
.nsymv1s {
  max-width: var(--_1u46xyh11);
}
.nsymv1t {
  max-width: var(--_1u46xyh12);
}
.nsymv1u {
  max-width: var(--_1u46xyh13);
}
.nsymv1v {
  max-width: var(--_1u46xyh14);
}
.nsymv1w {
  max-width: fit-content;
}
.nsymv1x {
  transition: var(--_1u46xyh5h);
}
.nsymv1y {
  transition: var(--_1u46xyh5i);
}
.nsymv1z:active {
  transform: var(--_1u46xyh5j);
}
html.nsymv110 .nsymv112,
html:not(.nsymv110) .nsymv111 {
  background: var(--_1u46xyh1s);
}
html.nsymv110 .nsymv114,
html:not(.nsymv110) .nsymv113 {
  background: var(--_1u46xyh1t);
}
html.nsymv110 .nsymv116,
html:not(.nsymv110) .nsymv115 {
  background: var(--_1u46xyh1u);
}
html.nsymv110 .nsymv118,
html:not(.nsymv110) .nsymv117 {
  background: var(--_1u46xyh1v);
}
html.nsymv110 .nsymv11a,
html:not(.nsymv110) .nsymv119 {
  background: var(--_1u46xyh1w);
}
html.nsymv110 .nsymv11c,
html:not(.nsymv110) .nsymv11b {
  background: var(--_1u46xyh1x);
}
html.nsymv110 .nsymv11e,
html:not(.nsymv110) .nsymv11d {
  background: var(--_1u46xyh1y);
}
html.nsymv110 .nsymv11g,
html:not(.nsymv110) .nsymv11f {
  background: var(--_1u46xyh1z);
}
html.nsymv110 .nsymv11i,
html:not(.nsymv110) .nsymv11h {
  background: var(--_1u46xyh20);
}
html.nsymv110 .nsymv11k,
html:not(.nsymv110) .nsymv11j {
  background: var(--_1u46xyh21);
}
html.nsymv110 .nsymv11m,
html:not(.nsymv110) .nsymv11l {
  background: var(--_1u46xyh22);
}
html.nsymv110 .nsymv11o,
html:not(.nsymv110) .nsymv11n {
  background: var(--_1u46xyh23);
}
html.nsymv110 .nsymv11q,
html:not(.nsymv110) .nsymv11p {
  background: var(--_1u46xyh24);
}
html.nsymv110 .nsymv11s,
html:not(.nsymv110) .nsymv11r {
  background: var(--_1u46xyh25);
}
html.nsymv110 .nsymv11u,
html:not(.nsymv110) .nsymv11t {
  background: var(--_1u46xyh26);
}
html.nsymv110 .nsymv11w,
html:not(.nsymv110) .nsymv11v {
  background: var(--_1u46xyh27);
}
html.nsymv110 .nsymv11y,
html:not(.nsymv110) .nsymv11x {
  background: var(--_1u46xyh28);
}
html.nsymv110 .nsymv120,
html:not(.nsymv110) .nsymv11z {
  background: var(--_1u46xyh29);
}
html.nsymv110 .nsymv122,
html:not(.nsymv110) .nsymv121 {
  background: var(--_1u46xyh2a);
}
html.nsymv110 .nsymv124,
html:not(.nsymv110) .nsymv123 {
  background: var(--_1u46xyh2b);
}
html.nsymv110 .nsymv126,
html:not(.nsymv110) .nsymv125 {
  background: var(--_1u46xyh2c);
}
html.nsymv110 .nsymv128,
html:not(.nsymv110) .nsymv127 {
  background: var(--_1u46xyh2d);
}
html.nsymv110 .nsymv12a,
html:not(.nsymv110) .nsymv129 {
  background: var(--_1u46xyh2e);
}
html.nsymv110 .nsymv12c,
html:not(.nsymv110) .nsymv12b {
  background: var(--_1u46xyh2f);
}
html.nsymv110 .nsymv12e,
html:not(.nsymv110) .nsymv12d {
  background: var(--_1u46xyh2g);
}
html.nsymv110 .nsymv12g,
html:not(.nsymv110) .nsymv12f {
  background: var(--_1u46xyh2h);
}
html.nsymv110 .nsymv12i,
html:not(.nsymv110) .nsymv12h {
  background: var(--_1u46xyh2i);
}
html.nsymv110 .nsymv12k,
html:not(.nsymv110) .nsymv12j {
  background: var(--_1u46xyh2j);
}
html.nsymv110 .nsymv12m,
html:not(.nsymv110) .nsymv12l {
  background: var(--_1u46xyh2k);
}
html.nsymv110 .nsymv12o,
html:not(.nsymv110) .nsymv12n {
  background: var(--_1u46xyh2l);
}
html.nsymv110 .nsymv12q,
html:not(.nsymv110) .nsymv12p {
  background: var(--_1u46xyh2m);
}
html.nsymv110 .nsymv12s,
html:not(.nsymv110) .nsymv12r {
  background: var(--_1u46xyh2n);
}
html.nsymv110 .nsymv12u,
html:not(.nsymv110) .nsymv12t {
  background: var(--_1u46xyh2o);
}
html.nsymv110 .nsymv12w,
html:not(.nsymv110) .nsymv12v {
  background: var(--_1u46xyh2p);
}
html.nsymv110 .nsymv12y,
html:not(.nsymv110) .nsymv12x {
  background: var(--_1u46xyh2q);
}
html.nsymv110 .nsymv130,
html:not(.nsymv110) .nsymv12z {
  background: var(--_1u46xyh2r);
}
html.nsymv110 .nsymv132,
html:not(.nsymv110) .nsymv131 {
  background: var(--_1u46xyh2s);
}
html.nsymv110 .nsymv134,
html:not(.nsymv110) .nsymv133 {
  background: var(--_1u46xyh2t);
}
html.nsymv110 .nsymv136,
html:not(.nsymv110) .nsymv135 {
  background: var(--_1u46xyh2u);
}
html.nsymv110 .nsymv138,
html:not(.nsymv110) .nsymv137 {
  box-shadow: var(--_1u46xyh5k);
}
html.nsymv110 .nsymv13a,
html:not(.nsymv110) .nsymv139 {
  box-shadow: var(--_1u46xyh5l);
}
html.nsymv110 .nsymv13c,
html:not(.nsymv110) .nsymv13b {
  box-shadow: var(--_1u46xyh5m);
}
html.nsymv110 .nsymv13e,
html:not(.nsymv110) .nsymv13d {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhf);
}
html.nsymv110 .nsymv13g,
html:not(.nsymv110) .nsymv13f {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhg);
}
html.nsymv110 .nsymv13i,
html:not(.nsymv110) .nsymv13h {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhf);
}
html.nsymv110 .nsymv13k,
html:not(.nsymv110) .nsymv13j {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhg);
}
html.nsymv110 .nsymv13m,
html:not(.nsymv110) .nsymv13l {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhh);
}
html.nsymv110 .nsymv13o,
html:not(.nsymv110) .nsymv13n {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhi);
}
html.nsymv110 .nsymv13q,
html:not(.nsymv110) .nsymv13p {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhj);
}
html.nsymv110 .nsymv13s,
html:not(.nsymv110) .nsymv13r {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhj);
}
html.nsymv110 .nsymv13u,
html:not(.nsymv110) .nsymv13t {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhk);
}
html.nsymv110 .nsymv13w,
html:not(.nsymv110) .nsymv13v {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhk);
}
html.nsymv110 .nsymv13y,
html:not(.nsymv110) .nsymv13x {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhl);
}
html.nsymv110 .nsymv140,
html:not(.nsymv110) .nsymv13z {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhn);
}
html.nsymv110 .nsymv142,
html:not(.nsymv110) .nsymv141 {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhn);
}
html.nsymv110 .nsymv144,
html:not(.nsymv110) .nsymv143 {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyho);
}
html.nsymv110 .nsymv146,
html:not(.nsymv110) .nsymv145 {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyho);
}
html.nsymv110 .nsymv148,
html:not(.nsymv110) .nsymv147 {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhp);
}
html.nsymv110 .nsymv14a,
html:not(.nsymv110) .nsymv149 {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhq);
}
html.nsymv110 .nsymv14c,
html:not(.nsymv110) .nsymv14b {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhr);
}
html.nsymv110 .nsymv14e,
html:not(.nsymv110) .nsymv14d {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhr);
}
html.nsymv110 .nsymv14g,
html:not(.nsymv110) .nsymv14f {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhs);
}
html.nsymv110 .nsymv14i,
html:not(.nsymv110) .nsymv14h {
  box-shadow: inset 0 0 0 var(--_1u46xyhz) var(--_1u46xyhs);
}
html.nsymv110 .nsymv14k,
html:not(.nsymv110) .nsymv14j {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyht);
}
html.nsymv110 .nsymv14m,
html:not(.nsymv110) .nsymv14l {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhu);
}
html.nsymv110 .nsymv14o,
html:not(.nsymv110) .nsymv14n {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhv);
}
html.nsymv110 .nsymv14q,
html:not(.nsymv110) .nsymv14p {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhw);
}
html.nsymv110 .nsymv14s,
html:not(.nsymv110) .nsymv14r {
  box-shadow: inset 0 0 0 var(--_1u46xyhy) var(--_1u46xyhx);
}
.nsymv14t {
  display: none;
}
.nsymv14x {
  display: block;
}
.nsymv151 {
  display: inline;
}
.nsymv155 {
  display: inline-block;
}
.nsymv159 {
  display: flex;
}
.nsymv15d {
  position: relative;
}
.nsymv15h {
  position: absolute;
}
.nsymv15l {
  position: fixed;
}
.nsymv15p {
  position: sticky;
}
.nsymv15t {
  border-radius: 0;
}
.nsymv15x {
  border-radius: 9999px;
}
.nsymv161 {
  border-radius: var(--_1u46xyhb);
}
.nsymv165 {
  border-radius: var(--_1u46xyhc);
}
.nsymv169 {
  border-radius: var(--_1u46xyhd);
}
.nsymv16d {
  border-radius: var(--_1u46xyhe);
}
.nsymv16h {
  gap: var(--_1u46xyh0);
}
.nsymv16l {
  gap: var(--_1u46xyh1);
}
.nsymv16p {
  gap: var(--_1u46xyh2);
}
.nsymv16t {
  gap: var(--_1u46xyh3);
}
.nsymv16x {
  gap: var(--_1u46xyh4);
}
.nsymv171 {
  gap: var(--_1u46xyh5);
}
.nsymv175 {
  gap: var(--_1u46xyh6);
}
.nsymv179 {
  gap: var(--_1u46xyh7);
}
.nsymv17d {
  gap: var(--_1u46xyh8);
}
.nsymv17h {
  gap: 0;
}
.nsymv17l {
  padding-top: var(--_1u46xyh0);
}
.nsymv17p {
  padding-top: var(--_1u46xyh1);
}
.nsymv17t {
  padding-top: var(--_1u46xyh2);
}
.nsymv17x {
  padding-top: var(--_1u46xyh3);
}
.nsymv181 {
  padding-top: var(--_1u46xyh4);
}
.nsymv185 {
  padding-top: var(--_1u46xyh5);
}
.nsymv189 {
  padding-top: var(--_1u46xyh6);
}
.nsymv18d {
  padding-top: var(--_1u46xyh7);
}
.nsymv18h {
  padding-top: var(--_1u46xyh8);
}
.nsymv18l {
  padding-top: 0;
}
.nsymv18p {
  padding-bottom: var(--_1u46xyh0);
}
.nsymv18t {
  padding-bottom: var(--_1u46xyh1);
}
.nsymv18x {
  padding-bottom: var(--_1u46xyh2);
}
.nsymv191 {
  padding-bottom: var(--_1u46xyh3);
}
.nsymv195 {
  padding-bottom: var(--_1u46xyh4);
}
.nsymv199 {
  padding-bottom: var(--_1u46xyh5);
}
.nsymv19d {
  padding-bottom: var(--_1u46xyh6);
}
.nsymv19h {
  padding-bottom: var(--_1u46xyh7);
}
.nsymv19l {
  padding-bottom: var(--_1u46xyh8);
}
.nsymv19p {
  padding-bottom: 0;
}
.nsymv19t {
  padding-right: var(--_1u46xyh0);
}
.nsymv19x {
  padding-right: var(--_1u46xyh1);
}
.nsymv1a1 {
  padding-right: var(--_1u46xyh2);
}
.nsymv1a5 {
  padding-right: var(--_1u46xyh3);
}
.nsymv1a9 {
  padding-right: var(--_1u46xyh4);
}
.nsymv1ad {
  padding-right: var(--_1u46xyh5);
}
.nsymv1ah {
  padding-right: var(--_1u46xyh6);
}
.nsymv1al {
  padding-right: var(--_1u46xyh7);
}
.nsymv1ap {
  padding-right: var(--_1u46xyh8);
}
.nsymv1at {
  padding-right: 0;
}
.nsymv1ax {
  padding-left: var(--_1u46xyh0);
}
.nsymv1b1 {
  padding-left: var(--_1u46xyh1);
}
.nsymv1b5 {
  padding-left: var(--_1u46xyh2);
}
.nsymv1b9 {
  padding-left: var(--_1u46xyh3);
}
.nsymv1bd {
  padding-left: var(--_1u46xyh4);
}
.nsymv1bh {
  padding-left: var(--_1u46xyh5);
}
.nsymv1bl {
  padding-left: var(--_1u46xyh6);
}
.nsymv1bp {
  padding-left: var(--_1u46xyh7);
}
.nsymv1bt {
  padding-left: var(--_1u46xyh8);
}
.nsymv1bx {
  padding-left: 0;
}
.nsymv1c1 {
  margin-top: var(--_1u46xyh0);
}
.nsymv1c5 {
  margin-top: var(--_1u46xyh1);
}
.nsymv1c9 {
  margin-top: var(--_1u46xyh2);
}
.nsymv1cd {
  margin-top: var(--_1u46xyh3);
}
.nsymv1ch {
  margin-top: var(--_1u46xyh4);
}
.nsymv1cl {
  margin-top: var(--_1u46xyh5);
}
.nsymv1cp {
  margin-top: var(--_1u46xyh6);
}
.nsymv1ct {
  margin-top: var(--_1u46xyh7);
}
.nsymv1cx {
  margin-top: var(--_1u46xyh8);
}
.nsymv1d1 {
  margin-top: 0;
}
.nsymv1d5 {
  margin-bottom: var(--_1u46xyh0);
}
.nsymv1d9 {
  margin-bottom: var(--_1u46xyh1);
}
.nsymv1dd {
  margin-bottom: var(--_1u46xyh2);
}
.nsymv1dh {
  margin-bottom: var(--_1u46xyh3);
}
.nsymv1dl {
  margin-bottom: var(--_1u46xyh4);
}
.nsymv1dp {
  margin-bottom: var(--_1u46xyh5);
}
.nsymv1dt {
  margin-bottom: var(--_1u46xyh6);
}
.nsymv1dx {
  margin-bottom: var(--_1u46xyh7);
}
.nsymv1e1 {
  margin-bottom: var(--_1u46xyh8);
}
.nsymv1e5 {
  margin-bottom: 0;
}
.nsymv1e9 {
  margin-right: var(--_1u46xyh0);
}
.nsymv1ed {
  margin-right: var(--_1u46xyh1);
}
.nsymv1eh {
  margin-right: var(--_1u46xyh2);
}
.nsymv1el {
  margin-right: var(--_1u46xyh3);
}
.nsymv1ep {
  margin-right: var(--_1u46xyh4);
}
.nsymv1et {
  margin-right: var(--_1u46xyh5);
}
.nsymv1ex {
  margin-right: var(--_1u46xyh6);
}
.nsymv1f1 {
  margin-right: var(--_1u46xyh7);
}
.nsymv1f5 {
  margin-right: var(--_1u46xyh8);
}
.nsymv1f9 {
  margin-right: 0;
}
.nsymv1fd {
  margin-left: var(--_1u46xyh0);
}
.nsymv1fh {
  margin-left: var(--_1u46xyh1);
}
.nsymv1fl {
  margin-left: var(--_1u46xyh2);
}
.nsymv1fp {
  margin-left: var(--_1u46xyh3);
}
.nsymv1ft {
  margin-left: var(--_1u46xyh4);
}
.nsymv1fx {
  margin-left: var(--_1u46xyh5);
}
.nsymv1g1 {
  margin-left: var(--_1u46xyh6);
}
.nsymv1g5 {
  margin-left: var(--_1u46xyh7);
}
.nsymv1g9 {
  margin-left: var(--_1u46xyh8);
}
.nsymv1gd {
  margin-left: 0;
}
.nsymv1gh {
  align-items: flex-start;
}
.nsymv1gl {
  align-items: center;
}
.nsymv1gp {
  align-items: flex-end;
}
.nsymv1gt {
  justify-content: flex-start;
}
.nsymv1gx {
  justify-content: center;
}
.nsymv1h1 {
  justify-content: flex-end;
}
.nsymv1h5 {
  justify-content: space-between;
}
.nsymv1h9 {
  flex-direction: row;
}
.nsymv1hd {
  flex-direction: row-reverse;
}
.nsymv1hh {
  flex-direction: column;
}
.nsymv1hl {
  flex-direction: column-reverse;
}
.nsymv1hp {
  flex-wrap: wrap;
}
.nsymv1ht {
  flex-wrap: nowrap;
}
.nsymv1hx {
  flex-shrink: 0;
}
.nsymv1i1 {
  flex-grow: 0;
}
.nsymv1i5 {
  flex-grow: 1;
}
.nsymv1i9 {
  text-align: left;
}
.nsymv1id {
  text-align: center;
}
.nsymv1ih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .nsymv14u {
    display: none;
  }
  .nsymv14y {
    display: block;
  }
  .nsymv152 {
    display: inline;
  }
  .nsymv156 {
    display: inline-block;
  }
  .nsymv15a {
    display: flex;
  }
  .nsymv15e {
    position: relative;
  }
  .nsymv15i {
    position: absolute;
  }
  .nsymv15m {
    position: fixed;
  }
  .nsymv15q {
    position: sticky;
  }
  .nsymv15u {
    border-radius: 0;
  }
  .nsymv15y {
    border-radius: 9999px;
  }
  .nsymv162 {
    border-radius: var(--_1u46xyhb);
  }
  .nsymv166 {
    border-radius: var(--_1u46xyhc);
  }
  .nsymv16a {
    border-radius: var(--_1u46xyhd);
  }
  .nsymv16e {
    border-radius: var(--_1u46xyhe);
  }
  .nsymv16i {
    gap: var(--_1u46xyh0);
  }
  .nsymv16m {
    gap: var(--_1u46xyh1);
  }
  .nsymv16q {
    gap: var(--_1u46xyh2);
  }
  .nsymv16u {
    gap: var(--_1u46xyh3);
  }
  .nsymv16y {
    gap: var(--_1u46xyh4);
  }
  .nsymv172 {
    gap: var(--_1u46xyh5);
  }
  .nsymv176 {
    gap: var(--_1u46xyh6);
  }
  .nsymv17a {
    gap: var(--_1u46xyh7);
  }
  .nsymv17e {
    gap: var(--_1u46xyh8);
  }
  .nsymv17i {
    gap: 0;
  }
  .nsymv17m {
    padding-top: var(--_1u46xyh0);
  }
  .nsymv17q {
    padding-top: var(--_1u46xyh1);
  }
  .nsymv17u {
    padding-top: var(--_1u46xyh2);
  }
  .nsymv17y {
    padding-top: var(--_1u46xyh3);
  }
  .nsymv182 {
    padding-top: var(--_1u46xyh4);
  }
  .nsymv186 {
    padding-top: var(--_1u46xyh5);
  }
  .nsymv18a {
    padding-top: var(--_1u46xyh6);
  }
  .nsymv18e {
    padding-top: var(--_1u46xyh7);
  }
  .nsymv18i {
    padding-top: var(--_1u46xyh8);
  }
  .nsymv18m {
    padding-top: 0;
  }
  .nsymv18q {
    padding-bottom: var(--_1u46xyh0);
  }
  .nsymv18u {
    padding-bottom: var(--_1u46xyh1);
  }
  .nsymv18y {
    padding-bottom: var(--_1u46xyh2);
  }
  .nsymv192 {
    padding-bottom: var(--_1u46xyh3);
  }
  .nsymv196 {
    padding-bottom: var(--_1u46xyh4);
  }
  .nsymv19a {
    padding-bottom: var(--_1u46xyh5);
  }
  .nsymv19e {
    padding-bottom: var(--_1u46xyh6);
  }
  .nsymv19i {
    padding-bottom: var(--_1u46xyh7);
  }
  .nsymv19m {
    padding-bottom: var(--_1u46xyh8);
  }
  .nsymv19q {
    padding-bottom: 0;
  }
  .nsymv19u {
    padding-right: var(--_1u46xyh0);
  }
  .nsymv19y {
    padding-right: var(--_1u46xyh1);
  }
  .nsymv1a2 {
    padding-right: var(--_1u46xyh2);
  }
  .nsymv1a6 {
    padding-right: var(--_1u46xyh3);
  }
  .nsymv1aa {
    padding-right: var(--_1u46xyh4);
  }
  .nsymv1ae {
    padding-right: var(--_1u46xyh5);
  }
  .nsymv1ai {
    padding-right: var(--_1u46xyh6);
  }
  .nsymv1am {
    padding-right: var(--_1u46xyh7);
  }
  .nsymv1aq {
    padding-right: var(--_1u46xyh8);
  }
  .nsymv1au {
    padding-right: 0;
  }
  .nsymv1ay {
    padding-left: var(--_1u46xyh0);
  }
  .nsymv1b2 {
    padding-left: var(--_1u46xyh1);
  }
  .nsymv1b6 {
    padding-left: var(--_1u46xyh2);
  }
  .nsymv1ba {
    padding-left: var(--_1u46xyh3);
  }
  .nsymv1be {
    padding-left: var(--_1u46xyh4);
  }
  .nsymv1bi {
    padding-left: var(--_1u46xyh5);
  }
  .nsymv1bm {
    padding-left: var(--_1u46xyh6);
  }
  .nsymv1bq {
    padding-left: var(--_1u46xyh7);
  }
  .nsymv1bu {
    padding-left: var(--_1u46xyh8);
  }
  .nsymv1by {
    padding-left: 0;
  }
  .nsymv1c2 {
    margin-top: var(--_1u46xyh0);
  }
  .nsymv1c6 {
    margin-top: var(--_1u46xyh1);
  }
  .nsymv1ca {
    margin-top: var(--_1u46xyh2);
  }
  .nsymv1ce {
    margin-top: var(--_1u46xyh3);
  }
  .nsymv1ci {
    margin-top: var(--_1u46xyh4);
  }
  .nsymv1cm {
    margin-top: var(--_1u46xyh5);
  }
  .nsymv1cq {
    margin-top: var(--_1u46xyh6);
  }
  .nsymv1cu {
    margin-top: var(--_1u46xyh7);
  }
  .nsymv1cy {
    margin-top: var(--_1u46xyh8);
  }
  .nsymv1d2 {
    margin-top: 0;
  }
  .nsymv1d6 {
    margin-bottom: var(--_1u46xyh0);
  }
  .nsymv1da {
    margin-bottom: var(--_1u46xyh1);
  }
  .nsymv1de {
    margin-bottom: var(--_1u46xyh2);
  }
  .nsymv1di {
    margin-bottom: var(--_1u46xyh3);
  }
  .nsymv1dm {
    margin-bottom: var(--_1u46xyh4);
  }
  .nsymv1dq {
    margin-bottom: var(--_1u46xyh5);
  }
  .nsymv1du {
    margin-bottom: var(--_1u46xyh6);
  }
  .nsymv1dy {
    margin-bottom: var(--_1u46xyh7);
  }
  .nsymv1e2 {
    margin-bottom: var(--_1u46xyh8);
  }
  .nsymv1e6 {
    margin-bottom: 0;
  }
  .nsymv1ea {
    margin-right: var(--_1u46xyh0);
  }
  .nsymv1ee {
    margin-right: var(--_1u46xyh1);
  }
  .nsymv1ei {
    margin-right: var(--_1u46xyh2);
  }
  .nsymv1em {
    margin-right: var(--_1u46xyh3);
  }
  .nsymv1eq {
    margin-right: var(--_1u46xyh4);
  }
  .nsymv1eu {
    margin-right: var(--_1u46xyh5);
  }
  .nsymv1ey {
    margin-right: var(--_1u46xyh6);
  }
  .nsymv1f2 {
    margin-right: var(--_1u46xyh7);
  }
  .nsymv1f6 {
    margin-right: var(--_1u46xyh8);
  }
  .nsymv1fa {
    margin-right: 0;
  }
  .nsymv1fe {
    margin-left: var(--_1u46xyh0);
  }
  .nsymv1fi {
    margin-left: var(--_1u46xyh1);
  }
  .nsymv1fm {
    margin-left: var(--_1u46xyh2);
  }
  .nsymv1fq {
    margin-left: var(--_1u46xyh3);
  }
  .nsymv1fu {
    margin-left: var(--_1u46xyh4);
  }
  .nsymv1fy {
    margin-left: var(--_1u46xyh5);
  }
  .nsymv1g2 {
    margin-left: var(--_1u46xyh6);
  }
  .nsymv1g6 {
    margin-left: var(--_1u46xyh7);
  }
  .nsymv1ga {
    margin-left: var(--_1u46xyh8);
  }
  .nsymv1ge {
    margin-left: 0;
  }
  .nsymv1gi {
    align-items: flex-start;
  }
  .nsymv1gm {
    align-items: center;
  }
  .nsymv1gq {
    align-items: flex-end;
  }
  .nsymv1gu {
    justify-content: flex-start;
  }
  .nsymv1gy {
    justify-content: center;
  }
  .nsymv1h2 {
    justify-content: flex-end;
  }
  .nsymv1h6 {
    justify-content: space-between;
  }
  .nsymv1ha {
    flex-direction: row;
  }
  .nsymv1he {
    flex-direction: row-reverse;
  }
  .nsymv1hi {
    flex-direction: column;
  }
  .nsymv1hm {
    flex-direction: column-reverse;
  }
  .nsymv1hq {
    flex-wrap: wrap;
  }
  .nsymv1hu {
    flex-wrap: nowrap;
  }
  .nsymv1hy {
    flex-shrink: 0;
  }
  .nsymv1i2 {
    flex-grow: 0;
  }
  .nsymv1i6 {
    flex-grow: 1;
  }
  .nsymv1ia {
    text-align: left;
  }
  .nsymv1ie {
    text-align: center;
  }
  .nsymv1ii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .nsymv14v {
    display: none;
  }
  .nsymv14z {
    display: block;
  }
  .nsymv153 {
    display: inline;
  }
  .nsymv157 {
    display: inline-block;
  }
  .nsymv15b {
    display: flex;
  }
  .nsymv15f {
    position: relative;
  }
  .nsymv15j {
    position: absolute;
  }
  .nsymv15n {
    position: fixed;
  }
  .nsymv15r {
    position: sticky;
  }
  .nsymv15v {
    border-radius: 0;
  }
  .nsymv15z {
    border-radius: 9999px;
  }
  .nsymv163 {
    border-radius: var(--_1u46xyhb);
  }
  .nsymv167 {
    border-radius: var(--_1u46xyhc);
  }
  .nsymv16b {
    border-radius: var(--_1u46xyhd);
  }
  .nsymv16f {
    border-radius: var(--_1u46xyhe);
  }
  .nsymv16j {
    gap: var(--_1u46xyh0);
  }
  .nsymv16n {
    gap: var(--_1u46xyh1);
  }
  .nsymv16r {
    gap: var(--_1u46xyh2);
  }
  .nsymv16v {
    gap: var(--_1u46xyh3);
  }
  .nsymv16z {
    gap: var(--_1u46xyh4);
  }
  .nsymv173 {
    gap: var(--_1u46xyh5);
  }
  .nsymv177 {
    gap: var(--_1u46xyh6);
  }
  .nsymv17b {
    gap: var(--_1u46xyh7);
  }
  .nsymv17f {
    gap: var(--_1u46xyh8);
  }
  .nsymv17j {
    gap: 0;
  }
  .nsymv17n {
    padding-top: var(--_1u46xyh0);
  }
  .nsymv17r {
    padding-top: var(--_1u46xyh1);
  }
  .nsymv17v {
    padding-top: var(--_1u46xyh2);
  }
  .nsymv17z {
    padding-top: var(--_1u46xyh3);
  }
  .nsymv183 {
    padding-top: var(--_1u46xyh4);
  }
  .nsymv187 {
    padding-top: var(--_1u46xyh5);
  }
  .nsymv18b {
    padding-top: var(--_1u46xyh6);
  }
  .nsymv18f {
    padding-top: var(--_1u46xyh7);
  }
  .nsymv18j {
    padding-top: var(--_1u46xyh8);
  }
  .nsymv18n {
    padding-top: 0;
  }
  .nsymv18r {
    padding-bottom: var(--_1u46xyh0);
  }
  .nsymv18v {
    padding-bottom: var(--_1u46xyh1);
  }
  .nsymv18z {
    padding-bottom: var(--_1u46xyh2);
  }
  .nsymv193 {
    padding-bottom: var(--_1u46xyh3);
  }
  .nsymv197 {
    padding-bottom: var(--_1u46xyh4);
  }
  .nsymv19b {
    padding-bottom: var(--_1u46xyh5);
  }
  .nsymv19f {
    padding-bottom: var(--_1u46xyh6);
  }
  .nsymv19j {
    padding-bottom: var(--_1u46xyh7);
  }
  .nsymv19n {
    padding-bottom: var(--_1u46xyh8);
  }
  .nsymv19r {
    padding-bottom: 0;
  }
  .nsymv19v {
    padding-right: var(--_1u46xyh0);
  }
  .nsymv19z {
    padding-right: var(--_1u46xyh1);
  }
  .nsymv1a3 {
    padding-right: var(--_1u46xyh2);
  }
  .nsymv1a7 {
    padding-right: var(--_1u46xyh3);
  }
  .nsymv1ab {
    padding-right: var(--_1u46xyh4);
  }
  .nsymv1af {
    padding-right: var(--_1u46xyh5);
  }
  .nsymv1aj {
    padding-right: var(--_1u46xyh6);
  }
  .nsymv1an {
    padding-right: var(--_1u46xyh7);
  }
  .nsymv1ar {
    padding-right: var(--_1u46xyh8);
  }
  .nsymv1av {
    padding-right: 0;
  }
  .nsymv1az {
    padding-left: var(--_1u46xyh0);
  }
  .nsymv1b3 {
    padding-left: var(--_1u46xyh1);
  }
  .nsymv1b7 {
    padding-left: var(--_1u46xyh2);
  }
  .nsymv1bb {
    padding-left: var(--_1u46xyh3);
  }
  .nsymv1bf {
    padding-left: var(--_1u46xyh4);
  }
  .nsymv1bj {
    padding-left: var(--_1u46xyh5);
  }
  .nsymv1bn {
    padding-left: var(--_1u46xyh6);
  }
  .nsymv1br {
    padding-left: var(--_1u46xyh7);
  }
  .nsymv1bv {
    padding-left: var(--_1u46xyh8);
  }
  .nsymv1bz {
    padding-left: 0;
  }
  .nsymv1c3 {
    margin-top: var(--_1u46xyh0);
  }
  .nsymv1c7 {
    margin-top: var(--_1u46xyh1);
  }
  .nsymv1cb {
    margin-top: var(--_1u46xyh2);
  }
  .nsymv1cf {
    margin-top: var(--_1u46xyh3);
  }
  .nsymv1cj {
    margin-top: var(--_1u46xyh4);
  }
  .nsymv1cn {
    margin-top: var(--_1u46xyh5);
  }
  .nsymv1cr {
    margin-top: var(--_1u46xyh6);
  }
  .nsymv1cv {
    margin-top: var(--_1u46xyh7);
  }
  .nsymv1cz {
    margin-top: var(--_1u46xyh8);
  }
  .nsymv1d3 {
    margin-top: 0;
  }
  .nsymv1d7 {
    margin-bottom: var(--_1u46xyh0);
  }
  .nsymv1db {
    margin-bottom: var(--_1u46xyh1);
  }
  .nsymv1df {
    margin-bottom: var(--_1u46xyh2);
  }
  .nsymv1dj {
    margin-bottom: var(--_1u46xyh3);
  }
  .nsymv1dn {
    margin-bottom: var(--_1u46xyh4);
  }
  .nsymv1dr {
    margin-bottom: var(--_1u46xyh5);
  }
  .nsymv1dv {
    margin-bottom: var(--_1u46xyh6);
  }
  .nsymv1dz {
    margin-bottom: var(--_1u46xyh7);
  }
  .nsymv1e3 {
    margin-bottom: var(--_1u46xyh8);
  }
  .nsymv1e7 {
    margin-bottom: 0;
  }
  .nsymv1eb {
    margin-right: var(--_1u46xyh0);
  }
  .nsymv1ef {
    margin-right: var(--_1u46xyh1);
  }
  .nsymv1ej {
    margin-right: var(--_1u46xyh2);
  }
  .nsymv1en {
    margin-right: var(--_1u46xyh3);
  }
  .nsymv1er {
    margin-right: var(--_1u46xyh4);
  }
  .nsymv1ev {
    margin-right: var(--_1u46xyh5);
  }
  .nsymv1ez {
    margin-right: var(--_1u46xyh6);
  }
  .nsymv1f3 {
    margin-right: var(--_1u46xyh7);
  }
  .nsymv1f7 {
    margin-right: var(--_1u46xyh8);
  }
  .nsymv1fb {
    margin-right: 0;
  }
  .nsymv1ff {
    margin-left: var(--_1u46xyh0);
  }
  .nsymv1fj {
    margin-left: var(--_1u46xyh1);
  }
  .nsymv1fn {
    margin-left: var(--_1u46xyh2);
  }
  .nsymv1fr {
    margin-left: var(--_1u46xyh3);
  }
  .nsymv1fv {
    margin-left: var(--_1u46xyh4);
  }
  .nsymv1fz {
    margin-left: var(--_1u46xyh5);
  }
  .nsymv1g3 {
    margin-left: var(--_1u46xyh6);
  }
  .nsymv1g7 {
    margin-left: var(--_1u46xyh7);
  }
  .nsymv1gb {
    margin-left: var(--_1u46xyh8);
  }
  .nsymv1gf {
    margin-left: 0;
  }
  .nsymv1gj {
    align-items: flex-start;
  }
  .nsymv1gn {
    align-items: center;
  }
  .nsymv1gr {
    align-items: flex-end;
  }
  .nsymv1gv {
    justify-content: flex-start;
  }
  .nsymv1gz {
    justify-content: center;
  }
  .nsymv1h3 {
    justify-content: flex-end;
  }
  .nsymv1h7 {
    justify-content: space-between;
  }
  .nsymv1hb {
    flex-direction: row;
  }
  .nsymv1hf {
    flex-direction: row-reverse;
  }
  .nsymv1hj {
    flex-direction: column;
  }
  .nsymv1hn {
    flex-direction: column-reverse;
  }
  .nsymv1hr {
    flex-wrap: wrap;
  }
  .nsymv1hv {
    flex-wrap: nowrap;
  }
  .nsymv1hz {
    flex-shrink: 0;
  }
  .nsymv1i3 {
    flex-grow: 0;
  }
  .nsymv1i7 {
    flex-grow: 1;
  }
  .nsymv1ib {
    text-align: left;
  }
  .nsymv1if {
    text-align: center;
  }
  .nsymv1ij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .nsymv14w {
    display: none;
  }
  .nsymv150 {
    display: block;
  }
  .nsymv154 {
    display: inline;
  }
  .nsymv158 {
    display: inline-block;
  }
  .nsymv15c {
    display: flex;
  }
  .nsymv15g {
    position: relative;
  }
  .nsymv15k {
    position: absolute;
  }
  .nsymv15o {
    position: fixed;
  }
  .nsymv15s {
    position: sticky;
  }
  .nsymv15w {
    border-radius: 0;
  }
  .nsymv160 {
    border-radius: 9999px;
  }
  .nsymv164 {
    border-radius: var(--_1u46xyhb);
  }
  .nsymv168 {
    border-radius: var(--_1u46xyhc);
  }
  .nsymv16c {
    border-radius: var(--_1u46xyhd);
  }
  .nsymv16g {
    border-radius: var(--_1u46xyhe);
  }
  .nsymv16k {
    gap: var(--_1u46xyh0);
  }
  .nsymv16o {
    gap: var(--_1u46xyh1);
  }
  .nsymv16s {
    gap: var(--_1u46xyh2);
  }
  .nsymv16w {
    gap: var(--_1u46xyh3);
  }
  .nsymv170 {
    gap: var(--_1u46xyh4);
  }
  .nsymv174 {
    gap: var(--_1u46xyh5);
  }
  .nsymv178 {
    gap: var(--_1u46xyh6);
  }
  .nsymv17c {
    gap: var(--_1u46xyh7);
  }
  .nsymv17g {
    gap: var(--_1u46xyh8);
  }
  .nsymv17k {
    gap: 0;
  }
  .nsymv17o {
    padding-top: var(--_1u46xyh0);
  }
  .nsymv17s {
    padding-top: var(--_1u46xyh1);
  }
  .nsymv17w {
    padding-top: var(--_1u46xyh2);
  }
  .nsymv180 {
    padding-top: var(--_1u46xyh3);
  }
  .nsymv184 {
    padding-top: var(--_1u46xyh4);
  }
  .nsymv188 {
    padding-top: var(--_1u46xyh5);
  }
  .nsymv18c {
    padding-top: var(--_1u46xyh6);
  }
  .nsymv18g {
    padding-top: var(--_1u46xyh7);
  }
  .nsymv18k {
    padding-top: var(--_1u46xyh8);
  }
  .nsymv18o {
    padding-top: 0;
  }
  .nsymv18s {
    padding-bottom: var(--_1u46xyh0);
  }
  .nsymv18w {
    padding-bottom: var(--_1u46xyh1);
  }
  .nsymv190 {
    padding-bottom: var(--_1u46xyh2);
  }
  .nsymv194 {
    padding-bottom: var(--_1u46xyh3);
  }
  .nsymv198 {
    padding-bottom: var(--_1u46xyh4);
  }
  .nsymv19c {
    padding-bottom: var(--_1u46xyh5);
  }
  .nsymv19g {
    padding-bottom: var(--_1u46xyh6);
  }
  .nsymv19k {
    padding-bottom: var(--_1u46xyh7);
  }
  .nsymv19o {
    padding-bottom: var(--_1u46xyh8);
  }
  .nsymv19s {
    padding-bottom: 0;
  }
  .nsymv19w {
    padding-right: var(--_1u46xyh0);
  }
  .nsymv1a0 {
    padding-right: var(--_1u46xyh1);
  }
  .nsymv1a4 {
    padding-right: var(--_1u46xyh2);
  }
  .nsymv1a8 {
    padding-right: var(--_1u46xyh3);
  }
  .nsymv1ac {
    padding-right: var(--_1u46xyh4);
  }
  .nsymv1ag {
    padding-right: var(--_1u46xyh5);
  }
  .nsymv1ak {
    padding-right: var(--_1u46xyh6);
  }
  .nsymv1ao {
    padding-right: var(--_1u46xyh7);
  }
  .nsymv1as {
    padding-right: var(--_1u46xyh8);
  }
  .nsymv1aw {
    padding-right: 0;
  }
  .nsymv1b0 {
    padding-left: var(--_1u46xyh0);
  }
  .nsymv1b4 {
    padding-left: var(--_1u46xyh1);
  }
  .nsymv1b8 {
    padding-left: var(--_1u46xyh2);
  }
  .nsymv1bc {
    padding-left: var(--_1u46xyh3);
  }
  .nsymv1bg {
    padding-left: var(--_1u46xyh4);
  }
  .nsymv1bk {
    padding-left: var(--_1u46xyh5);
  }
  .nsymv1bo {
    padding-left: var(--_1u46xyh6);
  }
  .nsymv1bs {
    padding-left: var(--_1u46xyh7);
  }
  .nsymv1bw {
    padding-left: var(--_1u46xyh8);
  }
  .nsymv1c0 {
    padding-left: 0;
  }
  .nsymv1c4 {
    margin-top: var(--_1u46xyh0);
  }
  .nsymv1c8 {
    margin-top: var(--_1u46xyh1);
  }
  .nsymv1cc {
    margin-top: var(--_1u46xyh2);
  }
  .nsymv1cg {
    margin-top: var(--_1u46xyh3);
  }
  .nsymv1ck {
    margin-top: var(--_1u46xyh4);
  }
  .nsymv1co {
    margin-top: var(--_1u46xyh5);
  }
  .nsymv1cs {
    margin-top: var(--_1u46xyh6);
  }
  .nsymv1cw {
    margin-top: var(--_1u46xyh7);
  }
  .nsymv1d0 {
    margin-top: var(--_1u46xyh8);
  }
  .nsymv1d4 {
    margin-top: 0;
  }
  .nsymv1d8 {
    margin-bottom: var(--_1u46xyh0);
  }
  .nsymv1dc {
    margin-bottom: var(--_1u46xyh1);
  }
  .nsymv1dg {
    margin-bottom: var(--_1u46xyh2);
  }
  .nsymv1dk {
    margin-bottom: var(--_1u46xyh3);
  }
  .nsymv1do {
    margin-bottom: var(--_1u46xyh4);
  }
  .nsymv1ds {
    margin-bottom: var(--_1u46xyh5);
  }
  .nsymv1dw {
    margin-bottom: var(--_1u46xyh6);
  }
  .nsymv1e0 {
    margin-bottom: var(--_1u46xyh7);
  }
  .nsymv1e4 {
    margin-bottom: var(--_1u46xyh8);
  }
  .nsymv1e8 {
    margin-bottom: 0;
  }
  .nsymv1ec {
    margin-right: var(--_1u46xyh0);
  }
  .nsymv1eg {
    margin-right: var(--_1u46xyh1);
  }
  .nsymv1ek {
    margin-right: var(--_1u46xyh2);
  }
  .nsymv1eo {
    margin-right: var(--_1u46xyh3);
  }
  .nsymv1es {
    margin-right: var(--_1u46xyh4);
  }
  .nsymv1ew {
    margin-right: var(--_1u46xyh5);
  }
  .nsymv1f0 {
    margin-right: var(--_1u46xyh6);
  }
  .nsymv1f4 {
    margin-right: var(--_1u46xyh7);
  }
  .nsymv1f8 {
    margin-right: var(--_1u46xyh8);
  }
  .nsymv1fc {
    margin-right: 0;
  }
  .nsymv1fg {
    margin-left: var(--_1u46xyh0);
  }
  .nsymv1fk {
    margin-left: var(--_1u46xyh1);
  }
  .nsymv1fo {
    margin-left: var(--_1u46xyh2);
  }
  .nsymv1fs {
    margin-left: var(--_1u46xyh3);
  }
  .nsymv1fw {
    margin-left: var(--_1u46xyh4);
  }
  .nsymv1g0 {
    margin-left: var(--_1u46xyh5);
  }
  .nsymv1g4 {
    margin-left: var(--_1u46xyh6);
  }
  .nsymv1g8 {
    margin-left: var(--_1u46xyh7);
  }
  .nsymv1gc {
    margin-left: var(--_1u46xyh8);
  }
  .nsymv1gg {
    margin-left: 0;
  }
  .nsymv1gk {
    align-items: flex-start;
  }
  .nsymv1go {
    align-items: center;
  }
  .nsymv1gs {
    align-items: flex-end;
  }
  .nsymv1gw {
    justify-content: flex-start;
  }
  .nsymv1h0 {
    justify-content: center;
  }
  .nsymv1h4 {
    justify-content: flex-end;
  }
  .nsymv1h8 {
    justify-content: space-between;
  }
  .nsymv1hc {
    flex-direction: row;
  }
  .nsymv1hg {
    flex-direction: row-reverse;
  }
  .nsymv1hk {
    flex-direction: column;
  }
  .nsymv1ho {
    flex-direction: column-reverse;
  }
  .nsymv1hs {
    flex-wrap: wrap;
  }
  .nsymv1hw {
    flex-wrap: nowrap;
  }
  .nsymv1i0 {
    flex-shrink: 0;
  }
  .nsymv1i4 {
    flex-grow: 0;
  }
  .nsymv1i8 {
    flex-grow: 1;
  }
  .nsymv1ic {
    text-align: left;
  }
  .nsymv1ig {
    text-align: center;
  }
  .nsymv1ik {
    text-align: right;
  }
}
._121uhli0 {
  --_1u46xyh0: 24px;
  --_1u46xyh1: 8px;
  --_1u46xyh2: 12px;
  --_1u46xyh3: 16px;
  --_1u46xyh4: 24px;
  --_1u46xyh5: 32px;
  --_1u46xyh6: 48px;
  --_1u46xyh7: 64px;
  --_1u46xyh8: 96px;
  --_1u46xyh9: 48px;
  --_1u46xyha: 4px;
  --_1u46xyhb: 4px;
  --_1u46xyhc: 8px;
  --_1u46xyhd: 16px;
  --_1u46xyhe: 24px;
  --_1u46xyhf: #e60278;
  --_1u46xyhg: #f8b1dc;
  --_1u46xyhh: #fdc221;
  --_1u46xyhi: #fee384;
  --_1u46xyhj: #b91e1e;
  --_1u46xyhk: #fb999a;
  --_1u46xyhl: #838fa5;
  --_1u46xyhm: rgba(153, 191, 247, 0.7);
  --_1u46xyhn: #1e47a9;
  --_1u46xyho: #99bff7;
  --_1u46xyhp: #1d559d;
  --_1u46xyhq: #98c9f1;
  --_1u46xyhr: #2e3849;
  --_1u46xyht: #eaecf1;
  --_1u46xyhs: #fff;
  --_1u46xyhu: #12784f;
  --_1u46xyhv: #8bdec5;
  --_1u46xyhw: #7f35a9;
  --_1u46xyhx: #e1b2f5;
  --_1u46xyhy: 2px;
  --_1u46xyhz: 4px;
  --_1u46xyh10: 6px;
  --_1u46xyh11: 400px;
  --_1u46xyh12: 660px;
  --_1u46xyh13: 940px;
  --_1u46xyh14: 1280px;
  --_1u46xyh15: #e60278;
  --_1u46xyh16: #f8b1dc;
  --_1u46xyh17: #723d02;
  --_1u46xyh18: #fee384;
  --_1u46xyh19: #b91e1e;
  --_1u46xyh1a: #fb999a;
  --_1u46xyh1b: #1e47a9;
  --_1u46xyh1c: #99bff7;
  --_1u46xyh1d: #1d559d;
  --_1u46xyh1e: #98c9f1;
  --_1u46xyh1f: #2e3849;
  --_1u46xyh1h: #fff;
  --_1u46xyh1g: #2e3849;
  --_1u46xyh1i: #5b2084;
  --_1u46xyh1j: #f0d6fa;
  --_1u46xyh1k: #2e3849;
  --_1u46xyh1l: #fff;
  --_1u46xyh1m: #12784f;
  --_1u46xyh1n: #8bdec5;
  --_1u46xyh1o: #7f35a9;
  --_1u46xyh1p: #e1b2f5;
  --_1u46xyh1q: #5a6881;
  --_1u46xyh1r: hsla(0, 0%, 100%, 0.65);
  --_1u46xyh1s: #fff;
  --_1u46xyh1t: #1c2330;
  --_1u46xyh1u: #051a49;
  --_1u46xyh1v: #e60278;
  --_1u46xyh1w: #cd026b;
  --_1u46xyh1x: #fd0585;
  --_1u46xyh1y: #feeffa;
  --_1u46xyh1z: #fdd7f3;
  --_1u46xyh20: #fde3f6;
  --_1u46xyh21: #fdc221;
  --_1u46xyh22: #fef8de;
  --_1u46xyh23: #b91e1e;
  --_1u46xyh24: #a31a1a;
  --_1u46xyh25: #db1616;
  --_1u46xyh26: #ffe3e2;
  --_1u46xyh27: #fef3f3;
  --_1u46xyh28: #fcdbdb;
  --_1u46xyh29: #fde7e7;
  --_1u46xyh2a: #1e47a9;
  --_1u46xyh2b: #1a3e93;
  --_1u46xyh2c: #2455c9;
  --_1u46xyh2d: #f0f7fe;
  --_1u46xyh2e: #d8eafc;
  --_1u46xyh2f: #e4f1fd;
  --_1u46xyh2g: #1d559d;
  --_1u46xyh2h: #e3f2fb;
  --_1u46xyh2i: #2e3849;
  --_1u46xyh2j: #242c39;
  --_1u46xyh2k: #384459;
  --_1u46xyh2l: #f3f5f7;
  --_1u46xyh2m: #f3f5f7;
  --_1u46xyh2n: #e4e8ed;
  --_1u46xyh2o: #ebeff2;
  --_1u46xyh2p: #12784f;
  --_1u46xyh2q: #e2f7f1;
  --_1u46xyh2r: #7f35a9;
  --_1u46xyh2s: #f9ebfd;
  --_1u46xyh2t: #fff;
  --_1u46xyh2u: #1c2330;
  --_1u46xyh2v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1u46xyh2w: 783;
  --_1u46xyh2x: 1057;
  --_1u46xyh2y: -274;
  --_1u46xyh2z: 0;
  --_1u46xyh30: 1000;
  --_1u46xyh3v: 18px;
  --_1u46xyh3w: 27.094px;
  --_1u46xyh3x: 14.094px;
  --_1u46xyh3y: -0.3611em;
  --_1u46xyh3z: -0.3611em;
  --_1u46xyh40: 18px;
  --_1u46xyh41: 27.094px;
  --_1u46xyh42: 14.094px;
  --_1u46xyh43: -0.3611em;
  --_1u46xyh44: -0.3611em;
  --_1u46xyh3l: 16px;
  --_1u46xyh3m: 24.528px;
  --_1u46xyh3n: 12.528px;
  --_1u46xyh3o: -0.375em;
  --_1u46xyh3p: -0.375em;
  --_1u46xyh3q: 16px;
  --_1u46xyh3r: 24.528px;
  --_1u46xyh3s: 12.528px;
  --_1u46xyh3t: -0.375em;
  --_1u46xyh3u: -0.375em;
  --_1u46xyh3b: 14px;
  --_1u46xyh3c: 20.962px;
  --_1u46xyh3d: 10.962px;
  --_1u46xyh3e: -0.3571em;
  --_1u46xyh3f: -0.3571em;
  --_1u46xyh3g: 14px;
  --_1u46xyh3h: 20.962px;
  --_1u46xyh3i: 10.962px;
  --_1u46xyh3j: -0.3571em;
  --_1u46xyh3k: -0.3571em;
  --_1u46xyh31: 12px;
  --_1u46xyh32: 18.396px;
  --_1u46xyh33: 9.396px;
  --_1u46xyh34: -0.375em;
  --_1u46xyh35: -0.375em;
  --_1u46xyh36: 12px;
  --_1u46xyh37: 18.396px;
  --_1u46xyh38: 9.396px;
  --_1u46xyh39: -0.375em;
  --_1u46xyh3a: -0.375em;
  --_1u46xyh45: 400;
  --_1u46xyh46: 600;
  --_1u46xyh47: 700;
  --_1u46xyh48: 28px;
  --_1u46xyh49: 38.924px;
  --_1u46xyh4a: 21.924px;
  --_1u46xyh4b: -0.3036em;
  --_1u46xyh4c: -0.3036em;
  --_1u46xyh4d: 36px;
  --_1u46xyh4e: 50.188px;
  --_1u46xyh4f: 28.188px;
  --_1u46xyh4g: -0.3056em;
  --_1u46xyh4h: -0.3056em;
  --_1u46xyh4i: 24px;
  --_1u46xyh4j: 33.792px;
  --_1u46xyh4k: 18.792px;
  --_1u46xyh4l: -0.3125em;
  --_1u46xyh4m: -0.3125em;
  --_1u46xyh4n: 30px;
  --_1u46xyh4o: 41.49px;
  --_1u46xyh4p: 23.49px;
  --_1u46xyh4q: -0.3em;
  --_1u46xyh4r: -0.3em;
  --_1u46xyh4s: 22px;
  --_1u46xyh4t: 31.226px;
  --_1u46xyh4u: 17.226px;
  --_1u46xyh4v: -0.3182em;
  --_1u46xyh4w: -0.3182em;
  --_1u46xyh4x: 24px;
  --_1u46xyh4y: 33.792px;
  --_1u46xyh4z: 18.792px;
  --_1u46xyh50: -0.3125em;
  --_1u46xyh51: -0.3125em;
  --_1u46xyh52: 20px;
  --_1u46xyh53: 27.66px;
  --_1u46xyh54: 15.66px;
  --_1u46xyh55: -0.3em;
  --_1u46xyh56: -0.3em;
  --_1u46xyh57: 20px;
  --_1u46xyh58: 27.66px;
  --_1u46xyh59: 15.66px;
  --_1u46xyh5a: -0.3em;
  --_1u46xyh5b: -0.3em;
  --_1u46xyh5c: 400;
  --_1u46xyh5d: 600;
  --_1u46xyh5e: underline;
  --_1u46xyh5f: 24px;
  --_1u46xyh5g: 20px;
  --_1u46xyh5h: transform 0.125s ease, opacity 0.125s ease;
  --_1u46xyh5i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1u46xyh5j: scale(0.95);
  --_1u46xyh5k:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1u46xyh5l:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1u46xyh5m:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1170cum4 {
  font-size: var(--_1170cum0);
  line-height: var(--_1170cum1);
}
._1170cum4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1170cum2);
}
._1170cum4:after {
  content: "";
  display: table;
  margin-top: var(--_1170cum3);
}
._115b53m0 {
  font-family: var(--_1u46xyh2v);
}
._115b53m1 {
  font-weight: var(--_1u46xyh45);
}
._115b53m2 {
  font-weight: var(--_1u46xyh46);
}
._115b53m3 {
  font-weight: var(--_1u46xyh47);
}
._115b53m4 {
  --_1170cum0: var(--_1u46xyh31);
  --_1170cum1: var(--_1u46xyh32);
  --_1170cum2: var(--_1u46xyh34);
  --_1170cum3: var(--_1u46xyh35);
}
._115b53m6 {
  --_1170cum0: var(--_1u46xyh3b);
  --_1170cum1: var(--_1u46xyh3c);
  --_1170cum2: var(--_1u46xyh3e);
  --_1170cum3: var(--_1u46xyh3f);
}
._115b53m8 {
  --_1170cum0: var(--_1u46xyh3l);
  --_1170cum1: var(--_1u46xyh3m);
  --_1170cum2: var(--_1u46xyh3o);
  --_1170cum3: var(--_1u46xyh3p);
}
._115b53ma {
  --_1170cum0: var(--_1u46xyh3v);
  --_1170cum1: var(--_1u46xyh3w);
  --_1170cum2: var(--_1u46xyh3y);
  --_1170cum3: var(--_1u46xyh3z);
}
._115b53mc {
  font-size: var(--_1u46xyh31);
  line-height: var(--_1u46xyh32);
}
._115b53md {
  font-size: var(--_1u46xyh3b);
  line-height: var(--_1u46xyh3c);
}
._115b53me {
  font-size: var(--_1u46xyh3l);
  line-height: var(--_1u46xyh3m);
}
._115b53mf {
  font-size: var(--_1u46xyh3v);
  line-height: var(--_1u46xyh3w);
}
._115b53mg {
  font-weight: var(--_1u46xyh5c);
}
._115b53mh {
  font-weight: var(--_1u46xyh5d);
}
._115b53mi {
  --_1170cum0: var(--_1u46xyh48);
  --_1170cum1: var(--_1u46xyh49);
  --_1170cum2: var(--_1u46xyh4b);
  --_1170cum3: var(--_1u46xyh4c);
}
._115b53mk {
  --_1170cum0: var(--_1u46xyh4i);
  --_1170cum1: var(--_1u46xyh4j);
  --_1170cum2: var(--_1u46xyh4l);
  --_1170cum3: var(--_1u46xyh4m);
}
._115b53mm {
  --_1170cum0: var(--_1u46xyh4s);
  --_1170cum1: var(--_1u46xyh4t);
  --_1170cum2: var(--_1u46xyh4v);
  --_1170cum3: var(--_1u46xyh4w);
}
._115b53mo {
  --_1170cum0: var(--_1u46xyh52);
  --_1170cum1: var(--_1u46xyh53);
  --_1170cum2: var(--_1u46xyh55);
  --_1170cum3: var(--_1u46xyh56);
}
html:not(.nsymv110) ._115b53m10 {
  --_115b53mq: var(--_1u46xyh19);
  --_115b53mr: var(--_1u46xyh17);
  --_115b53ms: var(--_1u46xyh1d);
  --_115b53mt: var(--_1u46xyh1o);
  --_115b53mu: var(--_1u46xyh1m);
  --_115b53mv: var(--_1u46xyh15);
  --_115b53mw: var(--_1u46xyh1b);
  --_115b53mx: var(--_1u46xyh1k);
  --_115b53my: var(--_1u46xyh1q);
  --_115b53mz: var(--_1u46xyh1f);
}
html:not(.nsymv110) ._115b53m11 {
  --_115b53mq: var(--_1u46xyh1a);
  --_115b53mr: var(--_1u46xyh18);
  --_115b53ms: var(--_1u46xyh1e);
  --_115b53mt: var(--_1u46xyh1p);
  --_115b53mu: var(--_1u46xyh1n);
  --_115b53mv: var(--_1u46xyh16);
  --_115b53mw: var(--_1u46xyh1c);
  --_115b53mx: var(--_1u46xyh1l);
  --_115b53my: var(--_1u46xyh1r);
  --_115b53mz: var(--_1u46xyh1h);
}
html.nsymv110 ._115b53m12 {
  --_115b53mq: var(--_1u46xyh19);
  --_115b53mr: var(--_1u46xyh17);
  --_115b53ms: var(--_1u46xyh1d);
  --_115b53mt: var(--_1u46xyh1o);
  --_115b53mu: var(--_1u46xyh1m);
  --_115b53mv: var(--_1u46xyh15);
  --_115b53mw: var(--_1u46xyh1b);
  --_115b53mx: var(--_1u46xyh1k);
  --_115b53my: var(--_1u46xyh1q);
  --_115b53mz: var(--_1u46xyh1f);
}
html.nsymv110 ._115b53m13 {
  --_115b53mq: var(--_1u46xyh1a);
  --_115b53mr: var(--_1u46xyh18);
  --_115b53ms: var(--_1u46xyh1e);
  --_115b53mt: var(--_1u46xyh1p);
  --_115b53mu: var(--_1u46xyh1n);
  --_115b53mv: var(--_1u46xyh16);
  --_115b53mw: var(--_1u46xyh1c);
  --_115b53mx: var(--_1u46xyh1l);
  --_115b53my: var(--_1u46xyh1r);
  --_115b53mz: var(--_1u46xyh1h);
}
html:not(.nsymv110) ._115b53m14,
html:not(.nsymv110) ._115b53m15,
html:not(.nsymv110) ._115b53m16,
html:not(.nsymv110) ._115b53m17 {
  --_115b53mx: var(--_115b53mq);
}
html:not(.nsymv110) ._115b53m18,
html:not(.nsymv110) ._115b53m19 {
  --_115b53mx: var(--_115b53mr);
}
html:not(.nsymv110) ._115b53m1a {
  --_115b53mx: var(--_115b53mu);
}
html:not(.nsymv110) ._115b53m1b {
  --_115b53mx: var(--_115b53ms);
}
html:not(.nsymv110) ._115b53m1c {
  --_115b53mx: var(--_115b53mt);
}
html.nsymv110 ._115b53m1d,
html.nsymv110 ._115b53m1e,
html.nsymv110 ._115b53m1f,
html.nsymv110 ._115b53m1g {
  --_115b53mx: var(--_115b53mq);
}
html.nsymv110 ._115b53m1h,
html.nsymv110 ._115b53m1i {
  --_115b53mx: var(--_115b53mr);
}
html.nsymv110 ._115b53m1j {
  --_115b53mx: var(--_115b53mu);
}
html.nsymv110 ._115b53m1k {
  --_115b53mx: var(--_115b53ms);
}
html.nsymv110 ._115b53m1l {
  --_115b53mx: var(--_115b53mt);
}
._115b53m1m {
  color: var(--_115b53mq);
}
._115b53m1n {
  color: var(--_115b53mr);
}
._115b53m1o {
  color: var(--_115b53ms);
}
._115b53m1p {
  color: var(--_115b53mt);
}
._115b53m1q {
  color: var(--_115b53mu);
}
._115b53m1r {
  color: var(--_115b53mv);
}
._115b53m1s {
  color: var(--_115b53mw);
}
._115b53m1t {
  color: var(--_115b53mx);
}
._115b53m1u {
  color: var(--_115b53my);
}
._115b53m1v {
  color: var(--_115b53mz);
}
._115b53m1w {
  padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh32)) / 2);
  padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh32)) / 2);
}
._115b53m1x {
  padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh3c)) / 2);
  padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh3c)) / 2);
}
._115b53m1y {
  padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh3m)) / 2);
  padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh3m)) / 2);
}
._115b53m1z {
  padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh3w)) / 2);
  padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh3w)) / 2);
}
@media screen and (min-width: 740px) {
  ._115b53m4 {
    --_1170cum0: var(--_1u46xyh36);
    --_1170cum1: var(--_1u46xyh37);
    --_1170cum2: var(--_1u46xyh39);
    --_1170cum3: var(--_1u46xyh3a);
  }
  ._115b53m6 {
    --_1170cum0: var(--_1u46xyh3g);
    --_1170cum1: var(--_1u46xyh3h);
    --_1170cum2: var(--_1u46xyh3j);
    --_1170cum3: var(--_1u46xyh3k);
  }
  ._115b53m8 {
    --_1170cum0: var(--_1u46xyh3q);
    --_1170cum1: var(--_1u46xyh3r);
    --_1170cum2: var(--_1u46xyh3t);
    --_1170cum3: var(--_1u46xyh3u);
  }
  ._115b53ma {
    --_1170cum0: var(--_1u46xyh40);
    --_1170cum1: var(--_1u46xyh41);
    --_1170cum2: var(--_1u46xyh43);
    --_1170cum3: var(--_1u46xyh44);
  }
  ._115b53mc {
    font-size: var(--_1u46xyh36);
    line-height: var(--_1u46xyh37);
  }
  ._115b53md {
    font-size: var(--_1u46xyh3g);
    line-height: var(--_1u46xyh3h);
  }
  ._115b53me {
    font-size: var(--_1u46xyh3q);
    line-height: var(--_1u46xyh3r);
  }
  ._115b53mf {
    font-size: var(--_1u46xyh40);
    line-height: var(--_1u46xyh41);
  }
  ._115b53mi {
    --_1170cum0: var(--_1u46xyh4d);
    --_1170cum1: var(--_1u46xyh4e);
    --_1170cum2: var(--_1u46xyh4g);
    --_1170cum3: var(--_1u46xyh4h);
  }
  ._115b53mk {
    --_1170cum0: var(--_1u46xyh4n);
    --_1170cum1: var(--_1u46xyh4o);
    --_1170cum2: var(--_1u46xyh4q);
    --_1170cum3: var(--_1u46xyh4r);
  }
  ._115b53mm {
    --_1170cum0: var(--_1u46xyh4x);
    --_1170cum1: var(--_1u46xyh4y);
    --_1170cum2: var(--_1u46xyh50);
    --_1170cum3: var(--_1u46xyh51);
  }
  ._115b53mo {
    --_1170cum0: var(--_1u46xyh57);
    --_1170cum1: var(--_1u46xyh58);
    --_1170cum2: var(--_1u46xyh5a);
    --_1170cum3: var(--_1u46xyh5b);
  }
  ._115b53m1w {
    padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh37)) / 2);
    padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh37)) / 2);
  }
  ._115b53m1x {
    padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh3h)) / 2);
    padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh3h)) / 2);
  }
  ._115b53m1y {
    padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh3r)) / 2);
    padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh3r)) / 2);
  }
  ._115b53m1z {
    padding-bottom: calc((var(--_1u46xyh9) - var(--_1u46xyh41)) / 2);
    padding-top: calc((var(--_1u46xyh9) - var(--_1u46xyh41)) / 2);
  }
}
.ezmxby0 {
  margin-bottom: -0.1em;
}
.ezmxby2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.ezmxby0 .ezmxby2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .ezmxby4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--ezmxby3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
.d2zwuz6 {
  background: var(--d2zwuz0);
}
.d2zwuz7 {
  background: var(--d2zwuz1);
}
.d2zwuz8 {
  background: var(--d2zwuz2);
}
.d2zwuz9 {
  background: var(--d2zwuz3);
}
.d2zwuza {
  background: var(--d2zwuz4);
}
.d2zwuzb {
  background: var(--d2zwuz5);
}
html:not(.nsymv110) .d2zwuzc {
  --d2zwuz0: var(--_1u46xyhw);
  --d2zwuz1: var(--_1u46xyhp);
  --d2zwuz2: var(--_1u46xyhu);
  --d2zwuz3: var(--_1u46xyhh);
  --d2zwuz4: var(--_1u46xyhj);
  --d2zwuz5: var(--_1u46xyhn);
}
html:not(.nsymv110) .d2zwuzd {
  --d2zwuz0: var(--_1u46xyhx);
  --d2zwuz1: var(--_1u46xyhq);
  --d2zwuz2: var(--_1u46xyhv);
  --d2zwuz3: var(--_1u46xyhi);
  --d2zwuz4: var(--_1u46xyhk);
  --d2zwuz5: var(--_1u46xyho);
}
html.nsymv110 .d2zwuze {
  --d2zwuz0: var(--_1u46xyhw);
  --d2zwuz1: var(--_1u46xyhp);
  --d2zwuz2: var(--_1u46xyhu);
  --d2zwuz3: var(--_1u46xyhh);
  --d2zwuz4: var(--_1u46xyhj);
  --d2zwuz5: var(--_1u46xyhn);
}
html.nsymv110 .d2zwuzf {
  --d2zwuz0: var(--_1u46xyhx);
  --d2zwuz1: var(--_1u46xyhq);
  --d2zwuz2: var(--_1u46xyhv);
  --d2zwuz3: var(--_1u46xyhi);
  --d2zwuz4: var(--_1u46xyhk);
  --d2zwuz5: var(--_1u46xyho);
}
.d2zwuzg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.d2zwuzh {
  width: var(--_1u46xyhe);
}
.d2zwuzi {
  width: var(--_1u46xyha);
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__nsymv110,html.sprinkles_darkMode__nsymv110 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__121uhli0 typography_lightModeTone_light__115b53m10 typography_darkModeTone_dark__115b53m13">
+        <div class="reset_base__m8hx7y0 sprinkles_paddingBottom_gutter_mobile__nsymv18p sprinkles_paddingTop_gutter_mobile__nsymv17l sprinkles_paddingLeft_gutter_mobile__nsymv1ax sprinkles_paddingRight_gutter_mobile__nsymv19t sprinkles_position_relative_mobile__nsymv15d sprinkles_borderRadius_large_mobile__nsymv169 sprinkles_textAlign_left_mobile__nsymv1i9 sprinkles_boxShadow_borderNeutralLight_lightMode__nsymv14j sprinkles_boxShadow_borderNeutral_darkMode__nsymv14c typography_lightModeTone_light__115b53m10 typography_darkModeTone_dark__115b53m13 sprinkles_background_surface_lightMode__nsymv133 sprinkles_background_surfaceDark_darkMode__nsymv136">
+          <span class="reset_base__m8hx7y0 sprinkles_display_block_mobile__nsymv14x typography_fontFamily__115b53m0 typography_fontWeight_regular__115b53m1 typography_tone_neutral__115b53m1t typography_textSize_large__115b53ma capsize_capsizeStyle__1170cum4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
